--- a/stylesheets/base/_base.scss
+++ b/stylesheets/base/_base.scss
@@ -7,35 +7,14 @@ html {
   width: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Agrandir', sans-serif;
 }
 *,
 *::before,
 *::after {
   box-sizing: inherit;
 }
-.left {
-  background: $white;
-  height: 100%;
-  
-}
-.right {
-  background: $light-blue;
-  height: 100%;
-
-}
-p {
-  font-weight: bold;
-  color: $dark-grey;
-  -webkit-margin-before: 0em;
-  -webkit-margin-after: 0em;
-}
 a {
   text-decoration: none;
 }
-.feather-icon {
-  width: 20px;
-  height: 20px;
-  stroke-width: 2.5px;
-  
-}
+
