--- a/stylesheets/base/_fonts.scss
+++ b/stylesheets/base/_fonts.scss
@@ -1,4 +1,4 @@
-// -----------------------------------------------------------------------------
-// This file contains all @font-face declarations, if any.
-// -----------------------------------------------------------------------------
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@font-face {
+    font-family: 'Agrandir';
+    src: url(fonts/Agrandir-Regular.otf) format('opentype');
+}
