--- a/stylesheets/base/_fonts.scss
+++ b/stylesheets/base/_fonts.scss
@@ -1,4 +1,4 @@
 @font-face {
     font-family: 'Agrandir';
-    src: url(fonts/Agrandir-Regular.otf) format('opentype');
+    src: url(../fonts/Agrandir-Regular.otf) format('opentype');
 }
