--- a/stylesheets/base/_base.scss
+++ b/stylesheets/base/_base.scss
@@ -16,9 +16,10 @@ html, body {
 }
 a {
   text-decoration: none;
+  color: #000;
 }
 .nav {
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 .dash {
   flex-grow: 1;
