--- a/stylesheets/base/_layout.scss
+++ b/stylesheets/base/_layout.scss
@@ -2,23 +2,28 @@
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: [col1] 50px [col2] auto [col3] 50px;
+    grid-template-columns: [col1] 100px [col2] auto [col3] 100px;
     grid-template-rows: [row1] 10% [row2] 10% [row3] auto;
     .nav {
         grid-column: col2 / col3;
         grid-row: row1 / row2;
         display: flex;
         justify-content: space-between;
+        line-height: 1;
         .logo {
             display: flex;
             align-self: flex-end;
-            line-height: 0;
         }
         .links {
             display: flex;
             align-self: flex-end;
             justify-content: space-between;
-            line-height: 0;
         }
+    }
+    .work {
+        grid-column: col2 / col3;
+        grid-row: row3;
+        display: flex;
+        background: #eee;
     }
 }
