typing animation test

--- a/stylesheets/base/_layout.scss
+++ b/stylesheets/base/_layout.scss
@@ -3,7 +3,7 @@
     height: 100%;
     display: grid;
     grid-template-columns: [col1] 100px [col2] auto [col3] 100px;
-    grid-template-rows: [row1] 100px [row2] 100px [row3] auto;
+    grid-template-rows: [row1] 100px [row2] 300px [row3] auto;
     .nav {
         grid-column: col2 / col3;
         grid-row: row1 / row2;
@@ -22,6 +22,19 @@
                 display: flex;
                 align-self: flex-end;
                 justify-content: space-between;
+            }
+        }
+    }
+    .intro {
+        grid-column: col2 / col3;
+        grid-row: row2 / row3;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        .intro-container {
+            p {
+                font-size: 5em;
+                padding-right: 0.1em;
             }
         }
     }
